# Oijkplayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/open/ijkplayer/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/open/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/open/ijkplayer/: MainActivity.java
app/src/main/java/com/open/player/: MainActivity.java  MainApplication.java
app/src/main/java/com/open/player/browser/: BrowseFileDialog.java  VideoFileAdapter.java
app/src/main/java/com/open/player/browser/bean/: VideoFile.java
app/src/main/java/com/open/player/widget/media/: AndroidMediaController.java  FileMediaDataSource.java  IMediaController.java  IRenderView.java  IjkVideoView.java  InfoHudViewHolder.java  MeasureHelper.java  MediaPlayerCompat.java  SurfaceRenderView.java  TableLayoutBinder.java  TextureRenderView.java
app/src/main/res/layout/: activity_main.xml  dialog_browse_file.xml  video_file_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/open/ijkplayer/: ExampleUnitTest.java
app/src/test/java/com/open/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ijkplayer/: build.gradle
ijkplayer/src/main/cpp/: CMakeLists.txt
ijkplayer/src/main/cpp/ijkmedia/ijkplayer/android/: ijkplayer_jni.c
